AC_INIT(configure.in)

AM_INIT_AUTOMAKE(cr3, 3.0.16)

AC_PROG_CXX
AM_PROG_LIBTOOL

PKG_PROG_PKG_CONFIG

AC_CONFIG_SUBDIRS(crengine)

#PKG_CHECK_MODULES(EWL, [ewl >= 0.5.2.042])
PKG_CHECK_MODULES(XCB, [xcb >= 1.1])
PKG_CHECK_MODULES(XCB_AUX, [xcb-aux >= 0.2])
PKG_CHECK_MODULES(XCB_IMAGE, [xcb-image >= 0.2])
PKG_CHECK_MODULES(XCB_KEYSYMS, [xcb-keysyms >= 0.2])
PKG_CHECK_MODULES(FREETYPE, [freetype2 >= 9.10])
PKG_CHECK_MODULES(PNG, [libpng >= 1.2])

#PKG_CHECK_MODULES(CRENGINE, [crengine >= 3.0.16])
CRENGINE_CFLAGS = "-I$(srcdir)/crengine/include -DLINUX -D_LINUX -DCOLOR_BACKBUFFER=0 "
CRENGINE_LIBS = "-L$(srcdir)/crengine/src -lcrengine "

AC_SUBST(CRENGINE_LIBS)
AC_SUBST(CRENGINE_CFLAGS)



want_xcb=yes


AC_OUTPUT(Makefile src/Makefile crengine/Makefile crengine/src/Makefile)
